--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 <div class="app-container">
   
   <div class="sidebar">
-    <h2>🚀 Flow Examples</h2>
+    <h2> Foblex Flow</h2>
     <nav>
       <a routerLink="/basic" routerLinkActive="active">Flow1</a>
       <a routerLink="/easy" routerLinkActive="active">Flow2</a>
