--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -1,5 +1,5 @@
 <div class="landing-container">
-  <h1>🚀 Flow Examples Landing Page</h1>
+  <h1> Flow Examples </h1>
   <div class="grid">
     <a routerLink="/basic">Basic Flow</a>
     <a routerLink="/easy">Easy Flow</a>
